.kubernetes/templates/authorizer/3.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: '%NAMESPACE%'
  name: %NAMESPACE%-authorizer
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: %NAMESPACE%-authorizer-container
  template:
    metadata:
      namespace: '%NAMESPACE%'
      labels:
        app: %NAMESPACE%-authorizer
        pod: %NAMESPACE%-authorizer-container
    spec:
      containers:
        - name: %NAMESPACE%-authorizer
          image: lakhansamani/authorizer:1.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 150m
            limits:
              memory: 128Mi
              cpu: 300m
