.kubernetes/templates/authorizer/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: '%NAMESPACE%'
  name: %NAMESPACE%-authorizer
  labels:
    app: %NAMESPACE%-authorizer
spec:
  selector:
    app: %NAMESPACE%-authorizer
  ports:
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
